# CVTK

./: README.md  json_to_yolo.py  main.py  pyproject.toml
adapters/: coco2yolo.py  yolo2coco.py
cvtk/: __init__.py  main.py
cvtk/bbox/: __init__.py  bbox.py  bbox_2xy.py  bbox_4xy.py  bbox_cwh.py
cvtk/supported_datasets/: __init__.py  abstract.py
cvtk/supported_datasets/coco/: dataset.py
cvtk/supported_datasets/coco/adapters/: __init__.py  to_yolo.py
cvtk/supported_datasets/coco/functions/: reader.py  writer.py
cvtk/supported_datasets/mvp/: __init__.py  dataset.py
cvtk/supported_datasets/mvp/adapters/: __init__.py  to_yolo.py
cvtk/supported_datasets/mvp/functions/: reader.py  writer.py
cvtk/supported_datasets/yolo/: __init__.py  dataset.py
cvtk/supported_datasets/yolo/adapters/: __init__.py  to_coco.py  to_mvp.py
cvtk/supported_datasets/yolo/functions/: reader.py  writer.py
cvtk/utils/: __init__.py  autoconverter.py  determinator.py
docs/: foo
pages/: __init__.py
pages/convert/: __init__.py
pages/filter/: __init__.py
pages/merge/: __init__.py
pages/rename/: __init__.py
src/: __init__.py  terminal.py
src/pages/: page.py
src/pages/convert/: page.py
src/pages/merge/: page.py
src/pages/merge/all/: page.py
src/pages/merge/two/: page.py
src/supported_datasets/: __init__.py
src/supported_datasets/coco/: __init__.py
src/supported_datasets/coco/adapters/: to_yolo.py
src/supported_datasets/coco/functions/: reader.py  writer.py
src/supported_datasets/yolo/: __init__.py
src/utils/: __init__.py  combiner.py  determinator.py
(+7 files in other folders)
