[tool.poetry]
name = "js-to-yo-and-vice-versa"
version = "0.1.0"
description = ""
authors = ["Pavel Lekomtsev <polekomtsev@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
