[tool.poetry]
name = "cvtk"
version = "0.2.0"
description = ""
authors = [
    "Vladislav Tyurin",
    "Maksim Shushkevich <m.e.shushkevich@yandex.com>",
    "Pavel Lekomtsev <polekomtsev@edu.hse.ru>",
]
readme = "README.md"
package-mode = true


[tool.poetry.dependencies]
python = ">=3.10, <4.0"
nodeflow = "^0.1.1"
pyyaml = "^6.0.2"
tqdm = "^4.66.6"
shapely = "^2.0.6"
pillow = "^11.0.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cvtk = "cvtk.main:main"
